[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "draw-figure"          # pip에서 보이는 패키지 이름 (원하면 바꿔도 됨)
version = "0.1.0"
description = "Helper functions to draw figures"
readme = "README.md"          # 없으면 이 줄은 지워도 됨
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
  { name = "Hyung-Gu Kang" }
]

# 여기에는 func_figures가 사용하는 라이브러리들 적기 (예시)
dependencies = [
  "matplotlib",
  "numpy",
]

[tool.setuptools]
# 이 프로젝트는 패키지 폴더가 아니라, 단일 파일 모듈임
py-modules = ["func_figures"]